# prashant-workshop

./: .gitignore  FAISSwrapper.py  hubspot_data.csv  hubspot_data.py  langchainwrap.py  mathplotlib_wrap.py  pi_wrap.py  pyproject.toml  sharpe_ratio.py  sharpe_ratio_portfolio.py  st-filemanager.py  testbench.ipynb  transform_videos.py
