[tool.poetry]
name = "testbench"
version = "0.1.0"
description = ""
authors = ["pkmohite <pmohite95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
moviepy = "^1.0.3"
faker = "^24.11.0"
datetime = "^5.5"
pandas = "^2.2.2"
openai = "^1.23.1"
streamlit = "^1.33.0"
streamlit-file-browser = "^3.2.20"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
